--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,21 +7,13 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  gradle:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Gradle Command
-      uses: eskatos/gradle-command-action@v1
-#       with:
-        # Path to the Gradle Wrapper directory
-#         wrapper-directory: # optional
-        # Path to the Gradle executable
-#         gradle-executable: # optional
-        # Gradle version to use
-#         gradle-version: # optional
-        # Path to the root directory of the build
-#         build-root-directory: # optional
-        # Gradle command line arguments, see gradle --help
-#         arguments: # optional
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build
