--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Gradle CI
+name: Gradle run tests
 
 on:
   push:
@@ -14,6 +14,5 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 11
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: build
+    - name: Run tests
+      run: ./gradlew test
