--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ flyway {
     password = "passowrd"
 }
 
-generateResumeBuilderJooqSchemaSource.enabled true
+generateResumeBuilderJooqSchemaSource.enabled false
 generateResumeBuilderJooqSchemaSource.dependsOn flywayMigrate
 test.dependsOn flywayClean
 
